--- a/modules/renderer/index.html
+++ b/modules/renderer/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Timmy Recorder</title>
 </head>
-<body>
+<body class="dark">
     <div id="root"></div>
     <script type="module" src="src/index.tsx"></script>
 </body>
